code update commit

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,21 +1,122 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title center>QueQ</ion-title>
+    <ion-title center>Menu</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+  <ion-list>
+    <ion-item>
+      <ion-thumbnail item-start>
+        <img src="img/thumbnail-totoro.png">
+      </ion-thumbnail>
+      <h2>คะน้าหมูกรอบ</h2>
+      <p>45 ฿</p>
+      <button ion-button clear item-end>Order</button>
+    </ion-item>
+  </ion-list>
 
- 
+  <ion-list>
+    <ion-item>
+      <ion-thumbnail item-start>
+        <img src="img/thumbnail-totoro.png">
+      </ion-thumbnail>
+      <h2>กระเพราหมูสับ</h2>
+      <p>45 ฿</p>
+      <button ion-button clear item-end>Order</button>
+    </ion-item>
+  </ion-list>
 
- 
+  <ion-list>
+    <ion-item>
+      <ion-thumbnail item-start>
+        <img src="img/thumbnail-totoro.png">
+      </ion-thumbnail>
+      <h2>ข้าวคลุกกระปิ</h2>
+      <p>40 ฿</p>
+      <button ion-button clear item-end>Order</button>
+    </ion-item>
+  </ion-list>
+
+  <ion-list>
+    <ion-item>
+      <ion-thumbnail item-start>
+        <img src="img/thumbnail-totoro.png">
+      </ion-thumbnail>
+      <h2>ข้าวไข่เจียว</h2>
+      <p>35 ฿</p>
+      <button ion-button clear item-end>Order</button>
+    </ion-item>
+  </ion-list>
+
+  <ion-list>
+    <ion-item>
+      <ion-thumbnail item-start>
+        <img src="img/thumbnail-totoro.png">
+      </ion-thumbnail>
+      <h2>ข้าวผัดหมู</h2>
+      <p>40 ฿</p>
+      <button ion-button clear item-end>Order</button>
+    </ion-item>
+  </ion-list>
+
+  <ion-list>
+    <ion-item>
+      <ion-thumbnail item-start>
+        <img src="img/thumbnail-totoro.png">
+      </ion-thumbnail>
+      <h2>ข้าวผัดไก่</h2>
+      <p>40 ฿</p>
+      <button ion-button clear item-end>Order</button>
+    </ion-item>
+  </ion-list>
+
+  <ion-list>
+    <ion-item>
+      <ion-thumbnail item-start>
+        <img src="img/thumbnail-totoro.png">
+      </ion-thumbnail>
+      <h2>ข้าวหมูเเดง</h2>
+      <p>40 ฿</p>
+      <button ion-button clear item-end>Order</button>
+    </ion-item>
+  </ion-list>
+
+  <ion-list>
+    <ion-item>
+      <ion-thumbnail item-start>
+        <img src="img/thumbnail-totoro.png">
+      </ion-thumbnail>
+      <h2>ข้าวยำไก่</h2>
+      <p>40 ฿</p>
+      <button ion-button clear item-end>Order</button>
+    </ion-item>
+  </ion-list>
+
+  <ion-list>
+    <ion-item>
+      <ion-thumbnail item-start>
+        <img src="img/thumbnail-totoro.png">
+      </ion-thumbnail>
+      <h2>ข้าวขาหมู</h2>
+      <p>40 ฿</p>
+      <button ion-button clear item-end>Order</button>
+    </ion-item>
+  </ion-list>
+
+  <ion-list>
+    <ion-item>
+      <ion-thumbnail item-start>
+        <img src="img/thumbnail-totoro.png">
+      </ion-thumbnail>
+      <h2>เกาเหลา+ข้าว</h2>
+      <p>45 ฿</p>
+      <button ion-button clear item-end>Order</button>
+    </ion-item>
+  </ion-list>
 
 </ion-content>
 
-<ion-footer padding>
-
-  <p></p>
-</ion-footer>
